# webevent-xai-dashboard

./: .gitignore  crawler.py  dashboard.py  global_tab copy.py  global_tab.py  local_tab.py  model_upload.ipynb  preprocessing.py  pyproject.toml  segment_shap.py  test_segment_shap.py  test_xai_perdict.py  text_crawler.py  url_classifier.py  xai_predict.py
old/: app.py  app_simple.py
