[project]
name = "xai-dashboard"
version = "0.1.0"
description = "Streamlit dashboard using lxt for Gradient × Input explanations"
requires-python = ">=3.12"

dependencies = [
    "streamlit>=1.35.0",
    "transformers>=4.41.0",
    "torch>=2.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "watchdog>=6.0.0",
    "torchvision>=0.22.1",
    "zennit>=0.5.1",
    "spacy>=3.8.7",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "datasets>=4.0.0",
    "scikit-learn>=1.7.1",
    "plotly>=6.2.0",
    "pytest>=8.4.1",
    "stqdm>=0.0.5",
    "huggingface-hub>=0.33.0",
    "lxt",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
]
